--- a/.config/i3/config
+++ b/.config/i3/config
@@ -392,8 +392,8 @@ exec --no-startup-id dex --autostart --environment i3
 # num lock activated
 #exec --no-startup-id numlockx on
 # configure multiple keyboard layouts and hotkey to switch (Alt+CAPSLOCK in this example)
-#exec --no-startup-id setxkbmap -layout 'us,sk' -variant altgr-intl,qwerty -option 'grp:alt_caps_toggle'
-
+exec setxkbmap -layout us,pk
+exec setxkbmap -option 'grp:alt_shift_toggle'
 # start conky:
 #exec_always --no-startup-id conky
 
