--- a/.config/i3/config
+++ b/.config/i3/config
@@ -1,3 +1,10 @@
+#   __        _ _     _                _                               _ 
+#  / _\ __ _ (_|_) __| |   /\/\   __ _| |__  _ __ ___   ___   ___   __| |
+#  \ \ / _` || | |/ _` |  /    \ / _` | '_ \| '_ ` _ \ / _ \ / _ \ / _` |
+#  _\ \ (_| || | | (_| | / /\/\ \ (_| | | | | | | | | | (_) | (_) | (_| |
+#  \__/\__,_|/ |_|\__,_| \/    \/\__,_|_| |_|_| |_| |_|\___/ \___/ \__,_|
+#          |__/
+
 # exec --no-startup-id ~/set_once.sh
 # This file is a modified version based on default i3-config-wizard config
 # source is available here:
@@ -335,12 +342,12 @@ bindsym --release Shift+Print exec "scrot -s $HOME/Pictures/ScreenShots/`date +%
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
-set $ws1 "1:"
+set $ws1 "1:"
 set $ws2 "2:"
 set $ws3 "3:"
 set $ws4 "4:"
-set $ws5 "5:"
-set $ws6 "6:"
+set $ws5 "5:"
+set $ws6 "6:﫯"
 set $ws7 "7"
 set $ws8 "8"
 set $ws9 "9"
