--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,3 +1,10 @@
+
+#   __        _ _     _                _                               _ 
+#  / _\ __ _ (_|_) __| |   /\/\   __ _| |__  _ __ ___   ___   ___   __| |
+#  \ \ / _` || | |/ _` |  /    \ / _` | '_ \| '_ ` _ \ / _ \ / _ \ / _` |
+#  _\ \ (_| || | | (_| | / /\/\ \ (_| | | | | | | | | | (_) | (_) | (_| |
+#  \__/\__,_|/ |_|\__,_| \/    \/\__,_|_| |_|_| |_| |_|\___/ \___/ \__,_|
+#          |__/                                                          
 # vim:fileencoding=utf-8:foldmethod=marker
 
 #: Fonts {{{
@@ -1474,7 +1481,7 @@ map kitty_mod+f6 debug_config
 
 #: }}}
 
-include dracula.conf
+include TokyoNight.conf
 
 
 # BEGIN_KITTY_THEME
