--- a/.config/i3/config
+++ b/.config/i3/config
@@ -375,8 +375,7 @@ exec --no-startup-id dex --autostart --environment i3
 # num lock activated
 #exec --no-startup-id numlockx on
 # configure multiple keyboard layouts and hotkey to switch (Alt+CAPSLOCK in this example)
-exec --no-startup-id setxkbmap -layout 'us,pk'
-exec --no-startup-id setxkbmap -option grp:alt_shift_toggle
+exec_always "setxkbmap -model pc105 -layout us,pk -variant ,, -option grp:alt_shift_toggle"
 # start conky:
 #exec_always --no-startup-id conky
 
