--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -13,7 +13,7 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      FiraCode NF
+font_family      FiraCode Nerd Font
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
@@ -296,7 +296,7 @@ detect_urls yes
 #: underline and the mouse cursor becomes a hand over them. Even if
 #: this option is disabled, URLs are still clickable.
 
-url_excluded_characters 
+#  url_excluded_characters 
 
 #: Additional characters to be disallowed from URLs, when detecting
 #: URLs under the mouse cursor. By default, all characters legal in
@@ -1486,5 +1486,4 @@ include TokyoNight.conf
 
 # BEGIN_KITTY_THEME
 # Dracula
-include current-theme.conf
 # END_KITTY_THEME
