--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -64,7 +64,7 @@ font-1 = "Firacode Nerd Font:pixelsize=8;3"
 ; All modules need not be added here
 modules-left = powermenu sps bspwm sps sps temperature sps  system-fan-speed sps cpu sps memory 
 modules-center = title
-modules-right =sps checkupdates sps netspeed sps backlight sps battery sps microphone sps pulseaudio sps caps sps scroll sps date
+modules-right =sps netspeed sps checkupdates sps backlight sps battery sps microphone sps pulseaudio sps caps sps scroll sps date
 ; Following modules are not enabled by default in Endeavour OS Bspwm Edition
 ;
 ; 1. mpd - Shows current playing track info.
@@ -552,14 +552,14 @@ margin-right = 0
 
 [module/checkupdates]
 type = custom/script
-interval = 900s
+interval = 300s
 exec = ~/.config/polybar/scripts/checkupdates.sh
 format-foreground = ${colors.yellow1}
 
 [module/system-fan-speed]
 type = custom/script
 exec = ~/.config/polybar/scripts/system-fan-speed.sh
-interval = 1
+interval = 0.5s
 format-foreground = ${colors.dark-green}
 content-padding = 1
 margin-right = 0
@@ -568,7 +568,7 @@ margin-right = 0
 [module/temperature]
 type = custom/script
 exec = ~/.config/polybar/scripts/temperature.sh
-interval = 1
+interval = 0.5s
 format-foreground = ${colors.red}
 content-padding = 1
 margin-right = 0
@@ -577,7 +577,7 @@ margin-right = 0
 [module/microphone]
 type = custom/script
 exec = ~/.config/polybar/scripts/microphone.sh
-interval = 0.5
+interval = 0.5s
 click-left = amixer -q sset Capture 5%+
 click-middle = amixer -q sset Capture toggle
 click-right = amixer -q sset Capture 5%-
