--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -30,7 +30,7 @@ bold_italic_font auto
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 12.0
+font_size 16.0
 
 #: Font size (in pts)
 
@@ -511,8 +511,8 @@ command_on_bell none
 #: Window layout {{{
 
 remember_window_size  yes
-initial_window_width  640
-initial_window_height 400
+initial_window_width  400
+initial_window_height 300
 
 #: If enabled, the window size will be remembered so that new
 #: instances of kitty will have the same size as the previous
@@ -708,7 +708,7 @@ tab_powerline_style slanted
 #: using powerline as the tab_bar_style, can be one of: angled,
 #: slanted, or round.
 
-tab_activity_symbol none
+tab_activity_symbol slanted
 
 #: Some text or a unicode symbol to show on the tab if a window in the
 #: tab that does not have focus has some activity. If you want to use
@@ -757,7 +757,7 @@ inactive_tab_font_style normal
 
 #: The foreground and background colors
 
-background_opacity 0.6
+background_opacity 0.8
 
 #: The opacity of the background. A number between 0 and 1, where 1 is
 #: opaque and 0 is fully transparent.  This will only work if
