--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -702,7 +702,7 @@ tab_separator " ┇"
 #: The separator between tabs in the tab bar when using separator as
 #: the tab_bar_style.
 
-tab_powerline_style slanted
+tab_powerline_style angled
 
 #: The powerline separator style between tabs in the tab bar when
 #: using powerline as the tab_bar_style, can be one of: angled,
