--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -14,13 +14,17 @@ $php\
 [](fg:#212736 bg:#1d2230)\
 $time\
 [ ](fg:#1d2230)\
+$conda\
+$container\
 $sudo\
 \n$character"""
 
 [directory]
 style = "fg:#e3e5e5 bg:#769ff0"
-format = "[ $path ]($style)"
-truncation_length = 3
+read_only = "🔒"
+# read_only_style = "red"
+format = "[ $path ]($style)[$read_only]($style)"
+truncation_length = 1
 truncation_symbol = "…/"
 
 [directory.substitutions]
@@ -35,8 +39,19 @@ style = "bg:#394260"
 format = '[[ $symbol $branch ](fg:#769ff0 bg:#394260)]($style)'
 
 [git_status]
+conflicted = '🏳'
+ahead = '⇡${count}'
+behind = '⇣${count}'
+diverged = '⇕⇡${ahead_count}⇣${behind_count}'
+up_to_date = '✓'
+untracked = '🤷${count}'
+stashed = '📦'
+modified = '📝${count}'
+staged = '[++\($count\)](green)'
+renamed = '👅'
+deleted = '🗑'
 style = "bg:#394260"
-format = '[[($all_status$ahead_behind )](fg:#769ff0 bg:#394260)]($style)'
+format = '[[($all_status $ahead_behind )](fg:#769ff0 bg:#394260)]($style)'
 
 [nodejs]
 symbol = ""
@@ -68,3 +83,13 @@ format = '[[  $time ](fg:#a0a9cb bg:#1d2230)]($style)'
 style = 'bold green'
 symbol = '👩‍💻 '
 disabled = false
+
+[conda]
+style = 'bold green'
+symbol = '🅒'
+format = '[$symbol $environment]($style) '
+
+[container]
+style = 'bold red dimmed'
+symbol = '⬢'
+format = '[$symbol \[$name\]]($style) '
