--- a/.config/brave-flags.conf
+++ b/.config/brave-flags.conf
@@ -1,6 +1,9 @@
---ignore-gpu-blocklist
---enable-gpu-rasterization
---enable-zero-copy
---disable-gpu-driver-bug-workarounds
---enable-features=VaapiVideoDecoder
---use-gl=egl
+# --ignore-gpu-blocklist
+# --enable-gpu-rasterization
+# --enable-zero-copy
+# --disable-gpu-driver-bug-workarounds
+# --enable-features=VaapiVideoDecoder
+# --use-gl=egl
+# 
+--enable-features=VaapiVideoDecodeLinuxGL
+
