Refactor tmux key bindings and theme settings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,21 +3,19 @@ set -g default-terminal xterm-256color
 set -g status-keys vi
 
 ## Switch Panes ##
-# Use Alt-arrow keys without prefix key to switch panes
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
-# Use Alt + Vim keys without prefix to switch panes
+# Alt + hjkl = move between panes
 bind -n M-h select-pane -L
 bind -n M-l select-pane -R
 bind -n M-k select-pane -U
 bind -n M-j select-pane -D
 
-## Switch Window Panes ## 
-#Shift arrow to switch windows 
-bind -n S-Left  previous-window
-bind -n S-Right next-window
+## Switch Window Panes ##
+# Ctrl + Left/Right = switch windows
+bind -n C-Left  previous-window
+bind -n C-Right next-window
+# Or Ctrl + h/l = switch windows (Vim style)
+bind -n C-h previous-window
+bind -n C-l next-window
 
 # Set easier window split keys
 bind-key v split-window -h
@@ -70,19 +68,19 @@ set -g visual-activity off
 # Length to show Tmux session name
 set -g status-left-length 50
 
-## Theme
-# Whole Status bar
+## theme
+# whole status bar
 set -g status-style bg=green,fg=black        # black text on green = strong contrast
-# Current window (highlight)
+# current window (highlight)
 set -g window-status-current-style bg=colour28,fg=colour189,bold
-# (colour28 is a darker green; fg=189 is light fg from Tokyo Night)
-# Inactive windows
+# (colour28 is a darker green; fg=189 is light fg from tokyo night)
+# inactive windows
 set -g window-status-style bg=green,fg=black
-# Windows with activity
-set -g window-status-activity-style bg=green,fg=yellow,bold
-# Messages / prompts
+# windows with activity
+set -g window-status-activity-style bg=green,fg=teal,bold
+# messages / prompts
 set -g message-style bg=colour61,fg=colour189  # dark blue bg, light fg
-# Pane borders
+# pane borders
 set -g pane-border-style fg=colour238         # subtle grey
 set -g pane-active-border-style fg=colour117  # bright cyan
 
@@ -91,3 +89,8 @@ setw -g monitor-activity on
 
 # Do NOT reset the color of the tab after activity stops occuring
 setw -g monitor-silence 0
+
+# Setting to work image previews inside Yazi inside tmux
+set -g allow-passthrough on
+set -ga update-environment TERM
+set -ga update-environment TERM_PROGRAM
