--- a/hyprland/walker/.config/walker/config.toml
+++ b/hyprland/walker/.config/walker/config.toml
@@ -60,8 +60,8 @@ hidden = true
 [builtins.clipboard]
 name = "Clipboard"
 icon = ""
-hidden = false
-prefix = ";"
+hidden = true
+# prefix = ";"
 
 [builtins.commands]
 hidden = true
