add cliphist clipboard bindings

--- a/hyprland/hypr/.config/hypr/bindings.conf
+++ b/hyprland/hypr/.config/hypr/bindings.conf
@@ -3,8 +3,8 @@ $terminal = uwsm app -- alacritty
 $browser = omarchy-launch-browser
 
 bindd = SUPER, return, Terminal, exec, $terminal --working-directory=$(omarchy-cmd-terminal-cwd)
-bindd = SUPER SHIFT, F, File manager, exec, uwsm app -- nautilus --new-window
-bindd = SUPER, F, Terminal File Manager, exec, $terminal -e yazi
+bindd = SUPER SHIFT, E, File manager, exec, uwsm app -- nautilus --new-window
+bindd = SUPER, E, Terminal File Manager, exec, $terminal -e yazi
 bindd = SUPER, B, Browser, exec, $browser
 bindd = SUPER SHIFT, B, Browser, exec, uwsm app -- chromium
 # bindd = SUPER, M, Music, exec, uwsm app -- spotify
@@ -18,15 +18,16 @@ bindd = SUPER, O, Obsidian, exec, uwsm app -- obsidian -disable-gpu
 bindd = SUPER, slash, Passwords, exec, uwsm app -- bitwarden-desktop
 bindd = SUPER SHIFT, slash, Passwords, exec, uwsm app -- enteauth
 
+# Cliphist Clipboard
+unbind = Super, V
+bindd = SUPER, V, Clipboard, exec, cliphist list | walker -d -l 1 -V 2 -t tab -p "Clipboard selection" | cliphist decode | wl-copy
+bindd = SUPER SHIFT, V, Clipboard, exec, cliphist list | walker -d -l 1 -V 2 -t tab -p "Clipboard delete" | cliphist delete
+# bindd = SUPER CTRL, V, Clipboard, exec, cliphist wipe #ISSUE: Freezes the Walker
+
 # If your web app url contains #, type it as ## to prevent hyperland treat it as comments
 bindd = SUPER, A, ChatGPT, exec, omarchy-launch-webapp "https://chatgpt.com"
 bindd = SUPER SHIFT, A, Grok, exec, omarchy-launch-webapp "https://grok.com"
-# bindd = SUPER, C, Calendar, exec, omarchy-launch-webapp "https://app.hey.com/calendar/weeks/"
-# bindd = SUPER, E, Email, exec, omarchy-launch-webapp "https://app.hey.com"
 bindd = SUPER, Y, YouTube, exec, omarchy-launch-webapp "https://youtube.com/"
-# bindd = SUPER SHIFT, G, WhatsApp, exec, omarchy-launch-webapp "https://web.whatsapp.com/"
-# bindd = SUPER ALT, G, Google Messages, exec, omarchy-launch-webapp "https://messages.google.com/web/conversations"
-# bindd = SUPER, X, X, exec, omarchy-launch-webapp "https://x.com/"
 
 # Overwrite existing bindings, like putting Omarchy Menu on Super + Space
 # unbind = SUPER, SPACE
