--- a/hyprland/hypr/.config/hypr/autostart.conf
+++ b/hyprland/hypr/.config/hypr/autostart.conf
@@ -1,14 +1,17 @@
 # Extra autostart processes
 # exec-once = uwsm app -- my-service
 
-# Launch Walker in service mode (currently needed for clipboard support)
-exec-once=uwsm app -- walker --gapplication-service
+# # Launch Walker in service mode (currently needed for clipboard support)
+# exec-once=uwsm app -- walker --gapplication-service
 
 # Megasync
 exec-once=uwsm app -- megasync
 
 # OpenSnitch UI
 exec-once= uwsm app -- opensnitch-ui
+
+# Cliphist clipboard
+exec-once = uwsm app -- wl-paste --watch cliphist store
 
 # Cursor Bibata
 exec-once=hyprctl setcursor Bibata-Modern-Amber 24
