--- a/hyprland/hypr/.config/hypr/hyprland.conf
+++ b/hyprland/hypr/.config/hypr/hyprland.conf
@@ -19,3 +19,4 @@ source = ~/.config/hypr/envs.conf
 source = ~/.config/hypr/autostart.conf
 source = ~/.config/hypr/windowrules.conf
 source = ~/.config/hypr/laptop.conf
+source = ~/.config/hypr/tiling.conf
