add binding for localsend

--- a/hyprland/hypr/.config/hypr/bindings.conf
+++ b/hyprland/hypr/.config/hypr/bindings.conf
@@ -14,6 +14,7 @@ bindd = SUPER SHIFT, Escape, Activity, exec, $terminal -e btop
 bindd = SUPER, D, Docker, exec, $terminal -e lazydocker
 bindd = SUPER, X, Terminate a Process, exec, hyprctl kill
 # bindd = SUPER, G, Signal, exec, uwsm app -- signal-desktop
+bindd = SUPER, L, LocalSend, exec, uwsm app -- localsend
 bindd = SUPER, O, Obsidian, exec, uwsm app -- obsidian -disable-gpu
 bindd = SUPER, slash, Passwords, exec, uwsm app -- bitwarden-desktop
 bindd = SUPER SHIFT, slash, Passwords, exec, uwsm app -- enteauth
