fix autostart for megasync

--- a/hyprland/hypr/.config/hypr/autostart.conf
+++ b/hyprland/hypr/.config/hypr/autostart.conf
@@ -5,7 +5,7 @@
 # exec-once=uwsm app -- walker --gapplication-service
 
 # Megasync
-exec-once=uwsm app -- megasync
+exec-once=uwsm app -- megasync &
 
 # OpenSnitch UI
 exec-once= uwsm app -- opensnitch-ui
