--- a/hyprland/waybar/.config/waybar/config.jsonc
+++ b/hyprland/waybar/.config/waybar/config.jsonc
@@ -4,7 +4,7 @@
   "position": "top",
   "spacing": 0,
   "height": 26,
-  "modules-left": ["custom/omarchy", "hyprland/workspaces"],
+  "modules-left": ["custom/omarchy", "hyprland/workspaces", "hyprland/window"],
   "modules-center": ["clock", "custom/update"],
   "modules-right": [
     "group/tray-expander",
@@ -39,6 +39,13 @@
       "5": []
     }
   },
+"hyprland/window": {
+  "format": "{title}",
+  "max-length": 80,
+  "icon": true,
+  "icon-size": 18,
+  "separate-outputs": true
+},
   "custom/omarchy": {
     "format": "<span font='omarchy'>\ue900</span>",
     "on-click": "omarchy-menu",
