--- a/hyprland/hypr/.config/hypr/autostart.conf
+++ b/hyprland/hypr/.config/hypr/autostart.conf
@@ -11,7 +11,7 @@ exec-once=uwsm app -- megasync &
 exec-once= uwsm app -- opensnitch-ui
 
 # Cliphist clipboard
-exec-once = uwsm app -- wl-pastea --type text --watch cliphist store
+exec-once = uwsm app -- wl-paste --type text --watch cliphist store
 exec-once = uwsm app -- wl-paste --type image --watch cliphist store
 
 # Cursor Bibata
