set yazi preview wrap

--- a/hyprland/yazi/.config/yazi/yazi.toml
+++ b/hyprland/yazi/.config/yazi/yazi.toml
@@ -2,3 +2,6 @@
 play = [{ run = 'mpv "$@"', orphan = true, for = "unix" }]
 edit = [{ run = 'nvim "$@"', block = true, for = "unix" }]
 open = [{ run = 'xdg-open "$@"', desc = "Open" }]
+
+[preview]
+wrap = "yes"
