maybe fix opensnitch startup issue On startup UI appears in the fullscreen, or sometimes in the normal mode. Maybe inhereting the state from the previously opened window.

--- a/hyprland/hypr/.config/hypr/autostart.conf
+++ b/hyprland/hypr/.config/hypr/autostart.conf
@@ -8,7 +8,7 @@
 exec-once=uwsm app -- megasync &
 
 # OpenSnitch UI
-exec-once= uwsm app -- opensnitch-ui
+exec-once= uwsm app -- opensnitch-ui &
 
 # Cliphist clipboard
 exec-once = uwsm app -- wl-paste --type text --watch cliphist store
