refactor touchpad gestures to new method

--- a/hyprland/hypr/.config/hypr/laptop.conf
+++ b/hyprland/hypr/.config/hypr/laptop.conf
@@ -3,15 +3,18 @@ decoration:blur:enabled = false
 decoration:shadow:enabled = false
 misc:vfr = true # Reduce number of sent frames on idle. Might cause issues with screen recordings
 
-# Touchpad Gestures to Swipe Between Workspaces
-gestures {
-    workspace_swipe = true
-    workspace_swipe_distance = 500
-    workspace_swipe_fingers = 3
-    workspace_swipe_min_fingers = true
-    workspace_swipe_cancel_ratio = 0.2
-    workspace_swipe_min_speed_to_force = 5
-    workspace_swipe_direction_lock = true
-    # workspace_swipe_create_new = true
-    workspace_swipe_direction_lock_threshold = 10
-}
+
+## Touchpad Gestures ##
+# 3-finger swipe right → next workspace
+gesture = 3, horizontal, workspace
+# Fullscreen
+gesture = 4, up, fullscreen
+# Resize active window
+gesture = 3, pinch, resize
+gesture = 3, swipe, mod: ALT, resize
+# Window Float Gesture
+gesture = 4, down, float
+# Special Workspace aka. scratchpad
+gesture = 3, down, special, scratchpad
+# Move a window
+gesture = 3, swipe, mod: SUPER, move
