--- a/hyprland/tmux/.tmux.conf
+++ b/hyprland/tmux/.tmux.conf
@@ -36,10 +36,11 @@ setw -g mode-keys vi
 unbind p
 bind p paste-buffer
 bind-key -T copy-mode-vi 'v' send -X begin-selection
-bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
+bind-key -T copy-mode-vi 'y' send -X copy-selection
 
 # Mouse Mode
 set -g mouse on
+# unbind -T copy-mode-vi MouseDragEnd1Pane # NOTE: It does nothing, it was suppose to disable mouse text selection scroll.
 
 # Lengthen the amount of time status messages are displayed
 set-option -g display-time 3000
