--- a/hyprland/hypr/.config/hypr/laptop.conf
+++ b/hyprland/hypr/.config/hypr/laptop.conf
@@ -5,16 +5,20 @@ misc:vfr = true # Reduce number of sent frames on idle. Might cause issues with 
 
 
 ## Touchpad Gestures ##
-# 3-finger swipe right → next workspace
+# Swipe between workspaces
 gesture = 3, horizontal, workspace
-# Fullscreen
-gesture = 4, up, fullscreen
 # Resize active window
 gesture = 3, pinch, resize
 gesture = 3, swipe, mod: ALT, resize
-# Window Float Gesture
-gesture = 4, down, float
-# Special Workspace aka. scratchpad
-gesture = 3, down, special, scratchpad
 # Move a window
 gesture = 3, swipe, mod: SUPER, move
+# Fullscreen
+gesture = 4, up, fullscreen
+# Window Float Gesture
+gesture = 4, down, float
+# Close a window
+gesture = 3, up, close
+# Special Workspace aka. scratchpad
+gesture = 3, down, special, scratchpad
+# Send Focus window to Special:Scratchpad
+gesture = 3, down, mod: CTRL,  dispatcher, movetoworkspace, special:scratchpad
