--- a/hyprland/hypr/.config/hypr/input.conf
+++ b/hyprland/hypr/.config/hypr/input.conf
@@ -11,14 +11,14 @@ input {
   repeat_delay = 600
 
   # Increase sensitity for mouse/trackpack (default: 0)
-  # sensitivity = 0.35
+  sensitivity = 0.35
 
   touchpad {
     # Use natural (inverse) scrolling
-    # natural_scroll = true
+    natural_scroll = true
 
     # Use two-finger clicks for right-click instead of lower-right corner
-    # clickfinger_behavior = true
+    clickfinger_behavior = true
 
     # Control the speed of your scrolling
     scroll_factor = 0.8
