--- a/hyprland/hypr/.config/hypr/bindings.conf
+++ b/hyprland/hypr/.config/hypr/bindings.conf
@@ -36,8 +36,8 @@ bindd = SUPER, Y, YouTube, exec, omarchy-launch-webapp "https://youtube.com/"
 
 ## Special Workspaces for Minimizing programs
 # Minimize windows using special workspaces (One bind can only handle one window)
-bind = SUPER, M, togglespecialworkspace, magic
+bind = SUPER, M, togglespecialworkspace, scratchpad
 bind = SUPER, M, movetoworkspace, +0
-bind = SUPER, M, togglespecialworkspace, magic
-bind = SUPER, M, movetoworkspace, special:magic
-bind = SUPER, M, togglespecialworkspace, magic
+bind = SUPER, M, togglespecialworkspace, scratchpad
+bind = SUPER, M, movetoworkspace, special:scratchpad
+bind = SUPER, M, togglespecialworkspace, scratchpad
