--- a/hyprland/hypr/.config/hypr/input.conf
+++ b/hyprland/hypr/.config/hypr/input.conf
@@ -3,8 +3,9 @@
 input {
   # Use multiple keyboard layouts and switch between them with Left Alt + Right Alt
   # kb_layout = us,dk,eu
-  kb_layout = us
-  kb_options = caps:swapescape
+  kb_layout = us, us, pk
+  kb_variant = , colemak_dh_iso,
+  kb_options = caps:swapescape, caps:swapescape, caps:swapescape, grp:alt_space_toggle
 
   # Change speed of keyboard repeat
   repeat_rate = 40
