disable mouse text selection copies and exit out of copy mode

--- a/hyprland/tmux/.tmux.conf
+++ b/hyprland/tmux/.tmux.conf
@@ -40,7 +40,8 @@ bind-key -T copy-mode-vi 'y' send -X copy-selection
 
 # Mouse Mode
 set -g mouse on
-# unbind -T copy-mode-vi MouseDragEnd1Pane # NOTE: It does nothing, it was suppose to disable mouse text selection scroll.
+# Disable mosue selection immediately copies the text, pull out of copy mode
+unbind -T copy-mode-vi MouseDragEnd1Pane
 
 # Lengthen the amount of time status messages are displayed
 set-option -g display-time 3000
