add colemak dreymar's extend layer

--- a/hyprland/hypr/.config/hypr/autostart.conf
+++ b/hyprland/hypr/.config/hypr/autostart.conf
@@ -4,7 +4,7 @@
 # # Launch Walker in service mode (currently needed for clipboard support)
 # exec-once=uwsm app -- walker --gapplication-service
 
-# Megasync
+# Megasync # FIX: Megasync doesn't auto start in the background
 exec-once=uwsm app -- megasync &
 
 # OpenSnitch UI
