--- a/hyprland/hypr/.config/hypr/input.conf
+++ b/hyprland/hypr/.config/hypr/input.conf
@@ -3,13 +3,14 @@
 input {
   # Use multiple keyboard layouts and switch between them with Left Alt + Right Alt
   # kb_layout = us,dk,eu
-  kb_layout = us, us, pk
-  kb_variant = colemak_dh_iso, ,
-  kb_options = caps:swapescape, caps:swapescape, caps:swapescape, grp:alt_space_toggle
-
+  # kb_layout = us, us, pk
+  kb_layout = us,us,pk
+  kb_variant = ,colemak_dh_iso,
+  # kb_options = caps:swapescape, caps:swapescape, caps:swapescape, grp:alt_space_toggle
+  kb_options = grp:alt_shift_toggle,misc:extend,lv5:caps_switch_lock
   # Change speed of keyboard repeat
-  repeat_rate = 40
-  repeat_delay = 600
+  repeat_rate = 60
+  repeat_delay = 400
 
   # Increase sensitity for mouse/trackpack (default: 0)
   sensitivity = 0.35
