add dotfiles specific to kde

--- a/kde/tmux/.tmux.conf
+++ b/kde/tmux/.tmux.conf
@@ -1,6 +1,7 @@
 # Initial setup
 set -g default-terminal xterm-256color
 set -g status-keys vi
+set-option -g status-position top
 
 ## Switch Panes ##
 # # Alt + hjkl = move between panes
