update window rules

--- a/omarchy/hypr/windowrules.conf
+++ b/omarchy/hypr/windowrules.conf
@@ -1,7 +1,9 @@
 ## Window Flaot Rules ##
+#Cryptomator
+windowrule = float, center, title:Cryptomator #FIX: class:org.cryptomator.launcher.Cryptomator$MainApp doen't work
 # Bitwarden
-windowrule = float,class:^(Bitwarden)$
-windowrule = size 989 812,class:^(Bitwarden)$
+windowrule = float, class:^(Bitwarden)$
+windowrule = size 989 812, class:^(Bitwarden)$
 windowrule = float, class:^(brave-nngceckbapebfimnlniiiahkandclblb-Default)$
 windowrule = float, class:^(chrome-nngceckbapebfimnlniiiahkandclblb-Default)$
 windowrule = noscreenshare on, class:^(Bitwarden)$
@@ -44,4 +46,3 @@ windowrule = stayfocused,class:(flameshot)
 windowrule = float,class:(flameshot)
 # avoid transparency
 windowrule = opaque,class:(flameshot)
-
