add walker config, enable walker clipboard

--- a/omarchy/hypr/bindings.conf
+++ b/omarchy/hypr/bindings.conf
@@ -20,6 +20,9 @@ bindd = SUPER, L, LocalSend, exec, uwsm app -- localsend
 
 # Clipboard
 unbind = SUPER, V
+bindd = SUPER, V, Walker Clipboard, exec, walker -m clipboard
+bindd = SUPER SHIFT, V, Clear Clipboard, exec, walker -u
+
 
 # If your web app url contains #, type it as ## to prevent hyperland treat it as comments
 bindd = SUPER, A, ChatGPT, exec, omarchy-launch-webapp "https://chatgpt.com"
