--- a/omarchy/hypr/bindings.conf
+++ b/omarchy/hypr/bindings.conf
@@ -2,38 +2,34 @@
 $terminal = uwsm app -- $TERMINAL
 $browser = omarchy-launch-browser
 
-bindd = SUPER, return, Terminal, exec, $terminal --working-directory="$(omarchy-cmd-terminal-cwd)"
+bindd = SUPER, RETURN, Terminal, exec, $terminal --working-directory="$(omarchy-cmd-terminal-cwd)"
 # File Managers
 bindd = SUPER SHIFT, E, File manager, exec, uwsm app -- nautilus --new-window
 bindd = SUPER, E, Yazi, exec, $terminal -e yazi
 # Browsers
 bindd = SUPER, B, Brave Browser, exec, $browser
 bindd = SUPER SHIFT, B, Firefox, exec, uwsm app -- firefox
-# bindd = SUPER, M, Music, exec, omarchy-launch-or-focus spotify
+# bindd = SUPER SHIFT, M, Music, exec, omarchy-launch-or-focus spotify
 bindd = SUPER, N, Editor, exec, omarchy-launch-editor
-bindd = SUPER, T, Activity, exec, $terminal -e btop
-# bindd = SUPER, D, Docker, exec, $terminal -e lazydocker
-bindd = SUPER, G, Signal, exec, omarchy-launch-or-focus signal "uwsm app -- signal-desktop"
+bindd = SUPER SHIFT, T, Activity, exec, $terminal -e btop
+# bindd = SUPER SHIFT, D, Docker, exec, $terminal -e lazydocker
+# bindd = SUPER SHIFT, G, Signal, exec, omarchy-launch-or-focus signal "uwsm app -- signal-desktop"
 bindd = SUPER, O, Obsidian, exec, omarchy-launch-or-focus obsidian "uwsm app -- obsidian --enable-wayland-ime"
 bindd = SUPER, slash, Passwords, exec, uwsm app -- bitwarden-desktop
 bindd = SUPER, L, LocalSend, exec, uwsm app -- localsend
 
 # Clipboard
-unbind = SUPER, V
-bindd = SUPER, V, Walker Clipboard, exec, walker -m clipboard
+# unbind = SUPER SHIFT, V
+# bindd = SUPER SHIFT, V, Walker Clipboard, exec, walker -m clipboard
 bindd = SUPER SHIFT, V, Clear Clipboard, exec, walker -u
 
 
-# If your web app url contains #, type it as ## to prevent hyperland treat it as comments
-bindd = SUPER, A, ChatGPT, exec, omarchy-launch-webapp "https://chatgpt.com"
-bindd = SUPER SHIFT, A, Grok, exec, omarchy-launch-webapp "https://grok.com"
-# bindd = SUPER, C, Calendar, exec, omarchy-launch-webapp "https://app.hey.com/calendar/weeks/"
-# bindd = SUPER, E, Email, exec, omarchy-launch-webapp "https://app.hey.com"
-bindd = SUPER, Y, YouTube, exec, omarchy-launch-or-focus-webapp YouTube "https://youtube.com/"
-bindd = SUPER SHIFT, G, WhatsApp, exec, omarchy-launch-or-focus-webapp WhatsApp "https://web.whatsapp.com/"
-# bindd = SUPER ALT, G, Google Messages, exec, omarchy-launch-or-focus-webapp "Google Messages" "https://messages.google.com/web/conversations"
-bindd = SUPER, X, X, exec, omarchy-launch-webapp "https://x.com/"
-# bindd = SUPER SHIFT, X, X Post, exec, omarchy-launch-webapp "https://x.com/compose/post"
+# If your web app url contains #, type it as ## to prevent hyperland treat it as comments bindd = SUPER SHIFT, A, ChatGPT, exec, omarchy-launch-webapp "https://chatgpt.com" bindd = SUPER SHIFT ALT, A, Grok, exec, omarchy-launch-webapp "https://grok.com" bindd = SUPER SHIFT, C, Calendar, exec, omarchy-launch-webapp "https://app.hey.com/calendar/weeks/" bindd = SUPER SHIFT, E, Email, exec, omarchy-launch-webapp "https://app.hey.com"
+# bindd = SUPER, Y, YouTube, exec, omarchy-launch-or-focus-webapp YouTube "https://youtube.com/"
+# bindd = SUPER SHIFT ALT, G, WhatsApp, exec, omarchy-launch-or-focus-webapp WhatsApp "https://web.whatsapp.com/"
+# bindd = SUPER SHIFT CTRL, G, Google Messages, exec, omarchy-launch-or-focus-webapp "Google Messages" "https://messages.google.com/web/conversations"
+# bindd = SUPER, X, X, exec, omarchy-launch-webapp "https://x.com/"
+# bindd = SUPER SHIFT ALT, X, X Post, exec, omarchy-launch-webapp "https://x.com/compose/post"
 
 # Screenshots
 unbind = , PRINT
@@ -41,5 +37,5 @@ bindd = , PRINT, Flameshot, exec, flameshot gui
 
 
 # Overwrite existing bindings, like putting Omarchy Menu on Super + Space
-# unbind = SUPER, SPACE
-# bindd = SUPER, SPACE, Omarchy menu, exec, omarchy-menu
+# unbind = SUPER SHIFT, SPACE
+# bindd = SUPER SHIFT, SPACE, Omarchy menu, exec, omarchy-menu
