--- a/omarchy/hypr/tiling.conf
+++ b/omarchy/hypr/tiling.conf
@@ -1,2 +1,2 @@
-bindd = SUPER SHIFT, F, Toggle floating, togglefloating,
-bindd = SUPER, F, Force full screen, fullscreen, 0
+# bindd = SUPER SHIFT, F, Toggle floating, togglefloating,
+# bindd = SUPER, F, Force full screen, fullscreen, 0
