--- a/omarchy/walker/config.toml
+++ b/omarchy/walker/config.toml
@@ -54,7 +54,7 @@ prefix = "="
 provider = "calc"
 
 [[providers.prefixes]]
-prefix = "@"
+prefix = ";"
 provider = "websearch"
 
 [[providers.prefixes]]
