update omarchy dots

--- a/omarchy/hypr/windowrules.conf
+++ b/omarchy/hypr/windowrules.conf
@@ -7,6 +7,9 @@ windowrule = size 989 812, class:^(Bitwarden)$
 windowrule = float, class:^(brave-nngceckbapebfimnlniiiahkandclblb-Default)$
 windowrule = float, class:^(chrome-nngceckbapebfimnlniiiahkandclblb-Default)$
 windowrule = noscreenshare on, class:^(Bitwarden)$
+# windowrule = float, class:firefox title:Extension: (Bitwarden Password Manager) - Bitwarden — Mozilla Firefox
+# Packet Tracer
+windowrule = float, class:^(PacketTracer)$
 # Ente Auth
 windowrule = float, class:^(io.ente.auth)$
 windowrule = size 371 633, class:^(io.ente.auth)$
