--- a/omarchy/hypr/bindings.conf
+++ b/omarchy/hypr/bindings.conf
@@ -21,7 +21,7 @@ bindd = SUPER, L, LocalSend, exec, uwsm app -- localsend
 # Clipboard
 # unbind = SUPER SHIFT, V
 # bindd = SUPER SHIFT, V, Walker Clipboard, exec, walker -m clipboard
-bindd = SUPER SHIFT, V, Clear Clipboard, exec, walker -u
+# bindd = SUPER SHIFT, V, Clear Clipboard, exec, walker -u
 
 
 # If your web app url contains #, type it as ## to prevent hyperland treat it as comments bindd = SUPER SHIFT, A, ChatGPT, exec, omarchy-launch-webapp "https://chatgpt.com" bindd = SUPER SHIFT ALT, A, Grok, exec, omarchy-launch-webapp "https://grok.com" bindd = SUPER SHIFT, C, Calendar, exec, omarchy-launch-webapp "https://app.hey.com/calendar/weeks/" bindd = SUPER SHIFT, E, Email, exec, omarchy-launch-webapp "https://app.hey.com"
