--- a/omarchy/hypr/input.conf
+++ b/omarchy/hypr/input.conf
@@ -4,7 +4,7 @@ input {
   # Use multiple keyboard layouts and switch between them with Left Alt + Right Alt
   # kb_layout = us,dk,eu
   kb_layout = us,pk
-  kb_options = caps:swapescape, grp:alt_shift_toggle # ,grp:alts_toggle
+  kb_options = caps:escape_shifted_capslock, grp:alts_toggle # ,grp:alts_toggle
 
   # Change speed of keyboard repeat
   repeat_rate = 60
@@ -19,6 +19,7 @@ input {
   touchpad {
     # Use natural (inverse) scrolling
     natural_scroll = true
+    disable_while_typing = true
 
     # Use two-finger clicks for right-click instead of lower-right corner
     clickfinger_behavior = true
