--- a/omarchy/hypr/laptop.conf
+++ b/omarchy/hypr/laptop.conf
@@ -16,9 +16,9 @@ gesture = 3, swipe, mod: SUPER, move
 gesture = 4, up, fullscreen
 # Window Float Gesture
 gesture = 4, down, float
-# Close a window
-gesture = 3, up, close
+# # Close a window
+# gesture = 3, up, close
 # Special Workspace aka. scratchpad
-gesture = 3, down, special, scratchpad
+gesture = 3, up, special, scratchpad
 # Send Focus window to Special:Scratchpad
-gesture = 3, down, mod: CTRL,  dispatcher, movetoworkspace, special:scratchpad
+gesture = 3, up, mod: CTRL,  dispatcher, movetoworkspace, special:scratchpad
