update to latest dotfiles

--- a/omarchy/hypr/windowrules.conf
+++ b/omarchy/hypr/windowrules.conf
@@ -1,51 +1,167 @@
 ## Window Flaot Rules ##
 #Cryptomator
-windowrule = float, center, title:Cryptomator #FIX: class:org.cryptomator.launcher.Cryptomator$MainApp doen't work
+windowrule {
+  name = windowrule-1
+  float = on
+  center = on
+  match:title = Cryptomator #FIX: class:org.cryptomator.launcher.Cryptomator$MainApp doen't work
+}
+
 # Bitwarden
-windowrule = float, class:^(Bitwarden)$
-windowrule = size 989 812, class:^(Bitwarden)$
-windowrule = float, class:^(brave-nngceckbapebfimnlniiiahkandclblb-Default)$
-windowrule = float, class:^(chrome-nngceckbapebfimnlniiiahkandclblb-Default)$
-windowrule = noscreenshare on, class:^(Bitwarden)$
+windowrule {
+  name = windowrule-2
+  float = on
+  size = 989 812
+  no_screen_share = on
+  match:class = ^(Bitwarden)$
+}
+
+windowrule {
+  name = windowrule-3
+  float = on
+  match:class = ^(brave-nngceckbapebfimnlniiiahkandclblb-Default)$
+}
+
+windowrule {
+  name = windowrule-4
+  float = on
+  match:class = ^(chrome-nngceckbapebfimnlniiiahkandclblb-Default)$
+}
+
 # windowrule = float, class:firefox title:Extension: (Bitwarden Password Manager) - Bitwarden — Mozilla Firefox
 # Packet Tracer
-windowrule = float, class:^(PacketTracer)$
+windowrule {
+  name = windowrule-5
+  float = on
+  match:class = ^(PacketTracer)$
+}
+
 # Ente Auth
-windowrule = float, class:^(io.ente.auth)$
-windowrule = size 371 633, class:^(io.ente.auth)$
+windowrule {
+  name = windowrule-6
+  float = on
+  size = 371 633
+  match:class = ^(io.ente.auth)$
+}
+
 # Misc. App Floats
-windowrule = float, class:^(feh)$
-windowrule = float, class:^(imv)$
-windowrule = float, class:^(nz.co.mega.megasync)$
-windowrule = float, class:^(MEGAsync)$
-windowrule = float, class:^(gufw)$
-windowrule = float, class:^(org.gnome.Calculator)$
+windowrule {
+  name = windowrule-7
+  float = on
+  match:class = ^(feh)$
+}
+
+windowrule {
+  name = windowrule-8
+  float = on
+  match:class = ^(imv)$
+}
+
+windowrule {
+  name = windowrule-9
+  float = on
+  match:class = ^(nz.co.mega.megasync)$
+}
+
+windowrule {
+  name = windowrule-10
+  float = on
+  match:class = ^(MEGAsync)$
+}
+
+windowrule {
+  name = windowrule-11
+  float = on
+  match:class = ^(gufw)$
+}
+
+windowrule {
+  name = windowrule-12
+  float = on
+  match:class = ^(org.gnome.Calculator)$
+}
+
 # # Float Thunar dialogs/popups
 # windowrule = float, title:(Rename.*)$
 
 ## Open on a particular Workspace ##
 # Social Media
-windowrule = workspace 6 silent, class:(brave-discord.com__channels_@me-Default)
-windowrule = workspace 6 silent, class:(brave-web.whatsapp.com__-Default)
-windowrule = workspace 6 silent, class:(brave-web.telegram.org__k_-Default)
-windowrule = workspace 6 silent, class:(brave-x.com__-Default)
-windowrule = workspace 6 silent, class:(brave-mastodon.social__home-Default)
-windowrule = workspace 6 silent, class:(brave-www.facebook.com__-Default)
-windowrule = workspace 6 silent, class:(brave-www.linkedin.com__-Default)
+windowrule {
+  name = windowrule-13
+  workspace = 6 silent
+  match:class = (brave-discord.com__channels_@me-Default)
+}
+
+windowrule {
+  name = windowrule-14
+  workspace = 6 silent
+  match:class = (brave-web.whatsapp.com__-Default)
+}
+
+windowrule {
+  name = windowrule-15
+  workspace = 6 silent
+  match:class = (brave-web.telegram.org__k_-Default)
+}
+
+windowrule {
+  name = windowrule-16
+  workspace = 6 silent
+  match:class = (brave-x.com__-Default)
+}
+
+windowrule {
+  name = windowrule-17
+  workspace = 6 silent
+  match:class = (brave-mastodon.social__home-Default)
+}
+
+windowrule {
+  name = windowrule-18
+  workspace = 6 silent
+  match:class = (brave-www.facebook.com__-Default)
+}
+
+windowrule {
+  name = windowrule-19
+  workspace = 6 silent
+  match:class = (brave-www.linkedin.com__-Default)
+}
+
 # Brave
-windowrule = workspace 1 silent, class:(brave-browser)
+windowrule {
+  name = windowrule-20
+  workspace = 1 silent
+  match:class = (brave-browser)
+}
+
 
 ## Window Border Color and Rounding ##
 #Bitwarden
-windowrule = bordercolor rgb(FF0000) rgb(880808), class:(Bitwarden) #red border
+windowrule {
+  name = windowrule-21
+  border_color = rgb(FF0000) rgb(880808)
+  match:class = (Bitwarden) #red border
+}
+
 # Ente Auth
-windowrule = bordercolor rgb(FF0000) rgb(880808), class:(io.ente.auth) #red border
+windowrule {
+  name = windowrule-22
+  border_color = rgb(FF0000) rgb(880808)
+  match:class = (io.ente.auth) #red border
+}
+
 
 # flameshot
-windowrule = move 0 0,class:(flameshot)
-windowrule = pin,class:(flameshot)
-windowrule = noborder,class:(flameshot)
-windowrule = stayfocused,class:(flameshot)
-windowrule = float,class:(flameshot)
+windowrule {
+  name = windowrule-23
+  move = (0) (0)
+  pin = on
+  border_size = 0
+  stay_focused = on
+  float = on
+  opaque = on
+  match:class = (flameshot)
+}
+
 # avoid transparency
-windowrule = opaque,class:(flameshot)
