--- a/omarchy/hypr/bindings.conf
+++ b/omarchy/hypr/bindings.conf
@@ -2,19 +2,19 @@
 $terminal = uwsm app -- $TERMINAL
 $browser = omarchy-launch-browser
 
-bindd = SUPER, RETURN, Terminal, exec, $terminal --working-directory="$(omarchy-cmd-terminal-cwd)"
+bindd = SUPER, RETURN, Terminal, exec, $terminal --dir="$(omarchy-cmd-terminal-cwd)"
 # File Managers
 bindd = SUPER SHIFT, E, File manager, exec, uwsm app -- nautilus --new-window
-bindd = SUPER, E, Yazi, exec, $terminal -e yazi
+bindd = SUPER, E, Yazi, exec, omarchy-launch-tui yazi
 # Browsers
 bindd = SUPER, B, Brave Browser, exec, $browser
 bindd = SUPER SHIFT, B, Firefox, exec, uwsm app -- firefox
 # bindd = SUPER SHIFT, M, Music, exec, omarchy-launch-or-focus spotify
 bindd = SUPER, N, Editor, exec, omarchy-launch-editor
-bindd = SUPER SHIFT, T, Activity, exec, $terminal -e btop
-# bindd = SUPER SHIFT, D, Docker, exec, $terminal -e lazydocker
+bindd = SUPER SHIFT, T, Activity, exec, omarchy-launch-tui btop
+# bindd = SUPER SHIFT, D, Docker, exec, omarchy-launch-tui lazydocker
 # bindd = SUPER SHIFT, G, Signal, exec, omarchy-launch-or-focus signal "uwsm app -- signal-desktop"
-bindd = SUPER, O, Obsidian, exec, omarchy-launch-or-focus obsidian "uwsm app -- obsidian --enable-wayland-ime"
+# bindd = SUPER, O, Obsidian, exec, omarchy-launch-or-focus obsidian "uwsm app -- obsidian --enable-wayland-ime"
 bindd = SUPER, slash, Passwords, exec, uwsm app -- bitwarden-desktop
 bindd = SUPER, L, LocalSend, exec, uwsm app -- localsend
 
