--- a/omarchy/hypr/input.conf
+++ b/omarchy/hypr/input.conf
@@ -30,8 +30,8 @@ input {
 }
 
 # Scroll nicely in the terminal
-windowrule = scrolltouchpad 2.8, class:(Alacritty|kitty)
-windowrule = scrolltouchpad 0.2, class:com.mitchellh.ghostty
+windowrule = scroll_touchpad 2.8, match:class (Alacritty|kitty)
+windowrule = scroll_touchpad 0.2, match:class com.mitchellh.ghostty
 
 # Enable touchpad gestures for changing workspaces
 # See https://wiki.hyprland.org/Configuring/Gestures/
