update walker config to latest

--- a/omarchy/walker/config.toml
+++ b/omarchy/walker/config.toml
@@ -12,12 +12,15 @@ quick_activate = []
 next = ["Down", "ctrl j"]
 previous = ["Up", "ctrl k"]
 
+[columns]
+symbols = 1 # providers to be queried by default
+
 [providers]
 max_results = 256 # 256 should be enough for everyone
 default = [
   "desktopapplications",
   "websearch",
-] # providers to be queried by default
+]
 
 [[providers.prefixes]]
 prefix = "/"
@@ -42,3 +45,7 @@ provider = "websearch"
 [[providers.prefixes]]
 prefix = "$"
 provider = "clipboard"
+
+[[emergencies]]
+text = "Restart Walker"
+command = "omarchy-restart-walker"
